# predict-sales

./: README.md  analise_data.ipynb  analyse_data.ipynb  dane.ipynb  functions.py  lightgbm.ipynb  predict.txt  prep_data.ipynb  prep_models.ipynb  pyproject.toml
